<resources>
    <string name="app_name">Ratings</string>

    <!-- Strings related to login -->
    <string name="admob_app_id">ca-app-pub-3917168775138367~2459668696</string>
    <string name="admob_ad_id">ca-app-pub-3917168775138367/4429078680</string>
    <string name="admob_banner_ad_id">ca-app-pub-3917168775138367/2637069573</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="wrong_information">No User found</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="text_full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="con_prompt_password">Confirm password</string>
    <string-array name="professions">
        <item>Profession/Business </item>
        <item>Teacher</item>
        <item>Engineer</item>
        <item>Programmer</item>
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Admin</item>
        <item>Businessman</item>
        <item>Politician</item>
        <item>Student</item>
    </string-array>
    <string-array name="review_category">
        <item>Person</item>
        <item>Programmer</item>
        <item>Businessman</item>
        <item>Politician</item>
        <item>Student</item>
        <item>Student</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_email_phone_number">Name / Email / Phone Number</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="organization_name">Organization Name</string>
    <string name="designation">Designation</string>
    <string name="active">Active</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://ratings.rashedkhan.com\",\n  }\n}]</string>
    <string name="change_password">Change password</string>
    <string name="change_your_password">Change your password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="nobody_rated">Nobody rated yet !</string>
    <string name="opening_dialog">Find someone you know and rate him/her by the categories he has !</string>
    <string name="create_feature">Create Feature</string>
    <string name="create">Create</string>
</resources>
