<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/white"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/change_your_password"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etCurrentPassword"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/current_password" />

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <Button
        style="@style/buttonFill"
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/change"
        android:textAllCaps="false" />
</LinearLayout>