<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.home.auth.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:gravity="center"
        android:scaleX=".45"
        android:scaleY=".45"
        android:src="@drawable/ratings_logo"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />


        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/buttonFill"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:onClick="gotoSignUp"
            android:text="Create Your Account"
            android:textColor="@color/light_blue_A400"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
