<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.home.auth.SignUpActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:text="Create Account "
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etFullName"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/text_full_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_call_end_black_24dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />


            <Spinner
                android:id="@+id/spnProfession"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:drawablePadding="10dp"
                android:dropDownSelector="@color/colorAccent"
                android:entries="@array/professions" />


            <EditText
                android:id="@+id/etPassword"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etConPassword"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/con_prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnSignUp"
                style="@style/buttonFill"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:onClick="gotoLogin"
                android:text="Already have an account ? Login"
                android:textColor="@color/light_blue_A400"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
