<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etEfFullName"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/text_full_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEfPhoneNumber"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_call_end_black_24dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEfAddress"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="start|top|left"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEfOrgName"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/organization_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEfDesignation"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/designation"
                    android:inputType="textMultiLine"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/chkEfActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:drawablePadding="10dp"
                    android:hint="@string/active"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civEfProfilePic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/ibtnSelectImage"
                        android:src="@drawable/avatar" />

                    <ImageButton
                        android:id="@+id/ibtnSelectImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="84dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:src="@drawable/ic_attach_file_black_24dp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnUpdateProfile"
                    style="@style/buttonFill"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:text="Update">

                </Button>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
