<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Search a person" />

            <EditText
                android:id="@+id/etUserNameOrEmail"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_email_phone_number"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/buttonFill"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/search" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_weight=".8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvPersonList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_ad_id" />
</LinearLayout>
